<resources>
    <string name="app_name">Guess</string>
    <string name="action_settings">Settings</string>
    <string name="please_enter_number_1_10">Please enter number (1~10)</string>
    <string name="smaller">Smaller</string>
    <string name="bigger">Bigger</string>
    <string name="yes_you_got_it">Excellent! The number is</string>
    <string name="dialog_title">Message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="replay_game">Replay game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="game_over">Opps! game over</string>
    <string name="secret_number_is">The secret number is</string>
</resources>
