...
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/number" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/number" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
...
